# Image-processor

./: CMakeLists.txt  image_processor.cpp  image_processor.h  readme.md
Filters/: Crop.cpp  EdgeDetection.cpp  Filter.cpp  Filter.h  FilterConstants.h  GaussianBlur.cpp  Grayscale.cpp  Negative.cpp  Relief.cpp  Sharpening.cpp
Image/: Color.cpp  Color.h  Image.cpp  Image.h
Parser/: Parser.cpp  Parser.h
Reading_and_writing/: Reader.cpp  Reader.h  Utils.h  Writer.cpp  Writer.h
Tools/: Tools.cpp  Tools.h
